turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:13: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var T = new Array[Int](1,8,0)
        ^Turmite:14: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var U = new Array[Int](1,0,0)
        ^Turmite:48: error: not found: value setCouleur
  	setCouleur
        ^